- `gt seqfilter` has new options -width, -o, -gzip, -bzip2 and -force
- `gt seqfilter` has new option -maxseqnum
- new tool `gt seqtransform` added
- `gt cds`, `gt extractfeat` and `gt splicesiteinfo` have new option -usedesc
- new tools `gt md5_to_id` and `gt id_to_md5` added
- `gt gff3` has new option -addids
- `gt stat` has new option -source


changes in version 1.3.5 (2010-07-12)

- `gt gff3 -tidy` cleans up multi-features with different parents
- `gt stat` shows number of multi-features
- `gt gff3 -sort` joins sequence regions with the same ID
- `gt cds` has new options -minorflen, -startcodon, and -finalstopcodon


changes in version 1.3.4 (2009-11-19)

- majority: bug fixes, cleanups
- new tool `gt ltrdigest` added
- new tool `gt convertseq` added
- new tool `gt repfind` added
- track order can be specified in AnnotationSketch
- new gcc compatibility fixes
- CustomStream and CustomVisitor base classes allow implementation of new
  functionality in {Ruby, Python}


changes in version 1.3.3 (2009-07-10)

- new tool `gt interfeat` added
- new tool `gt mergefeat` added
- new tool `gt dupfeat` added
- `gt gff3 -tidy` cleans up features with duplicate attributes
- new tool `gt ltrdigest` added


changes in version 1.3.2 (2009-04-29)

- bug fixes and cleanup


changes in version 1.3.1 (2009-04-24)

- `gt extractfeat` has new options -o, -gzip, and -bzip2
- `gt splitfasta` has new option -numfiles
- new tool `gt sketch_page` added
- `gt sketch` has new option -flattenfiles
- bug fixes


changes in version 1.3.0 (2008-12-03)

- `gt bed_to_gff3` has new options -featuretype, -thicktype, and -blocktype
- `gt sketch` has new option -input
- many extensions and some changes to the C API. E.g., AnnotationSketch now
  allows to define track selector functions and custom tracks.


changes in version 1.2.2 (2008-11-04)

- new tool `gt tallymer` added
- new tool `gt congruence` added
- the GenomeTools Python bindings (see gtpython/README) have been added