@@ -1,0 +1,2 @@
+##gff-version   3
+##sequence-region   ctg123 1 1497228
